# refusalbench

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DEVELOPER.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  quarterly_snapshot.yml
benchmark/: rubric.json  sensitivity_bundles.csv  templates.yaml
benchmark/config/: model_lineage.json  qc_council_config.json  sampling_config.json  should_refuse_criteria.yaml  sweep_models.json  template_config.json
benchmark/council/: v1.1-nvidia.json  v1.1-sensitivity.json  v1.1.json
benchmark/prompts/system/: sweep_v1.0.txt  system-prompts-v1.1.json
benchmark/prompts/v1.0/: README.md
benchmark/prompts/v1.0/benign/: binder_design_benign_0381c77a.json  binder_design_benign_24db5aad.json  binder_design_benign_302435b3.json  (+44 more)
data/: bundle_definitions.csv
data/catalogues/: binder_design.jsonl  enzyme_design.jsonl  stability_optimization.jsonl  structure_prediction.jsonl
data/raw/: australia_group_list.json  bsl_mapping.json  open_targets_binder_design_24.06.json  open_targets_enzyme_design_24.06.json  open_targets_stability_optimization_24.06.json  open_targets_structure_prediction_24.06.json  pathogen_targets.json  proteinflowbench_phase3_refusals.csv  select_agent_list.json  uniprot_toxin_annotations.json  who_priority_pathogens.json
docs/: adapter_decisions.md  catalogue_provenance.md  data_schemas.md  methodology.md  prompt_construction.md  supplementary_note_S1.md
hf_space/: README.md  app.py  requirements.txt
results/pilot/: pilot_aggregated.csv  pilot_categorization.csv  pilot_summary.md
results/pretest/: pretest_opus47.csv  pretest_sonnet46.csv
results/should_refuse/: should_refuse_definitions.csv  should_refuse_public_manifest.csv  should_refuse_review_log.csv  should_refuse_sweep_public.csv
results/snapshots/: README.md
results/snapshots/2026-05/: cost_bedrock.json  cost_openrouter.json  manifest.json  sweep_models.json  v1.1_nvidia_addition.md
scripts/: analyze_nvidia_v1.1.py  build_catalogues.py  fetch_sources.py  fix_accessions.py  freeze_prompt_set.sh  generate_missing_prompts.py  generate_prompts.py  pretest_opus47.py  pretest_sonnet46.py  push_hf_space.py  render_prompts.py  rotate_bedrock_key.sh  run_council.py  run_nvidia_v1.1.py  run_pilot_categorization.py  run_pretest.sh  run_render_pipeline.py  run_sensitivity_sweep.py  run_sweep_all.py  sample_records.py  set_openrouter_key.sh  should_refuse_cli.py  tier_rules.py  validate_prompts.py
scripts/hooks/: check_no_private_prompts.py
src/refusalbench/: __init__.py  council.py  prompts.py  runner.py  score.py  scripts_entry.py
src/refusalbench/analysis/: __init__.py  figures.py  longitudinal.py  stats.py
src/refusalbench/judges/: __init__.py  base.py  llm_judge.py  mock.py
src/refusalbench/prompt_build/: __init__.py  catalogue.py  pipeline.py  qc_council.py  rendering.py  sampling.py  tier_rules.py  validators.py
src/refusalbench/providers/: __init__.py  anthropic.py  base.py  bedrock.py  mock.py  openrouter.py
src/refusalbench/should_refuse/: __init__.py  classifier.py  generator.py  public_export.py  validators.py
tests/: conftest.py  test_analysis.py  test_build_catalogues.py  test_council.py  test_judges.py  test_longitudinal.py  test_pipeline.py  test_prompts.py  test_providers.py  test_qc_parsing.py  test_rendering.py  test_rubric_council_config.py  test_runner.py  test_sampling.py  test_score.py  test_should_refuse.py  test_tier_rules.py
(+111 files in other folders)
